# lussac

./: .coveragerc  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  compile  conftest.py  init.py  main.py  phy_data.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  version.py
.github/: codecov.yml
.github/workflows/: build-docs.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-app.yml  testing-dataset.yml  unit-tests-linux.yml  unit-tests-windows.yml  unit-tests.yml
benchmarks/: analyze_purkinje_pairs.py
benchmarks/.ipynb_checkpoints/: lussac_benchmark_injection-checkpoint.ipynb  synthetic-checkpoint.ipynb
core/: lussac_data.py  module.py  module_factory.py  mono_sorting_data.py  pipeline.py
core/tests/: test_modulefactory.py
docs/source/: conf.py  contact.rst  index.rst  installation.rst  modules.rst  params.rst  run.rst
lussac/: main.py  version.py
lussac/core/: lussac_data.py  module.py  module_factory.py  pipeline.py
lussac/modules/: align_units.py  export_to_phy.py  export_to_sigui.py  merge_sortings.py  merge_units.py  remove_bad_units.py  remove_duplicated_spikes.py  remove_redundant_units.py  units_categorization.py
lussac/utils/: __init__.py  misc.py  plotting.py  variables.py
modules/: export_to_phy.py  module.py  mono_sorting_module.py  multi_sortings_module.py  remove_bad_units.py
params_examples/: params_cerebellar_cortex.json  params_cerebellar_cortex[beta].json  params_cerebral_cortex.json  params_standard_postproc.json  params_synthetic.json
postprocessing/: center_cluster.py  center_waveform.py  dbscan.py  filter.py  merge_sortings.py  merge_units.py  pipeline.py  remove_bad_units.py  remove_duplicates.py  scores.py  utils.cpp  utils.py  utils.pyx  wvf_extractor.py
spike_sorting/: kilosort.py  kilosort2.py  kilosort25.py  kilosort3.py  mountainsort3.py  mountainsort4.py  spike_sorter.py  spykingcircus.py
src/lussac/: __init__.py  main.py
src/lussac/core/: __init__.py  lussac_data.py  lussac_params.py  module.py  module_factory.py  pipeline.py  spike_sorting.py  template_extractor.py
src/lussac/modules/: .export_to_phy.py.swp  __init__.py  align_units.py  export_to_phy.py  export_to_sigui.py  find_purkinje_cells.py  merge_sortings.py  merge_units.py  remove_bad_units.py  remove_duplicated_spikes.py  remove_redundant_units.py  units_categorization.py
src/lussac/params_examples/: params_cerebellar_cortex.json  params_cerebellar_cortex[beta].json  params_synthetic.json
src/lussac/spike_sorting/: spike_sorter.py
src/lussac/utils/: __init__.py  misc.py  plotting.py  variables.py
tests/: conftest.py  test_main.py  test_version.py
tests/core/: test_lussac_data.py  test_lussac_params.py  test_modulefactory.py  test_mono_sorting_data.py  test_mono_sorting_module.py  test_multi_sortings_data.py  test_multi_sortings_module.py  test_pipeline.py  test_spike_sorting.py  test_template_extractor.py
tests/datasets/cerebellar_cortex/: params.json
tests/modules/: test_align_units.py  test_export_to_phy.py  test_export_to_sigui.py  test_find_purkinje_cells.py  test_merge_sortings.py  test_merge_units.py  test_remove_bad_units.py  test_remove_duplicated_spikes.py  test_remove_redundant_units.py  test_units_categorization.py
tests/utils/: test_0variables.py  test_misc.py  test_plotting.py  test_variables.py
