[build-system]
requires = ["pip>=21.3", "setuptools>=65.6.3"]

[project]
name = "lussac"
version = "2.0.0.dev"
authors = [
	{name="Aurélien Wyngaard", email="aurelien.wyngaard@gmail.com"}
]
description = "Python package for automatic post-processing and merging of multiple spike-sorting analyses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.22",
	"scipy>=1.9",
	"scikit-learn>=1.0",
	"matplotlib>=3.4",
	"plotly>=5.8.2",
	"kaleido",
	"pandas>=1.4.2",
	"networkx>=2.7",
	"jsmin>=3.0",
	"numba>=0.56.2",
	"overrides>=7.3.1",
	"spikeinterface>=0.97",
	"probeinterface>=0.2.16",
	"neo>=0.11.0",
	"h5py>=3.7",
	"sphinx>=6.0",
	"pytest>=7.1.3",
	"pytest-cov>=3.0.0"
]

[project.scripts]
lussac = "lussac.main:main"

[project.urls]
homepage = "https://github.com/BarbourLab/lussac"
repository = "https://github.com/BarbourLab/lussac"
# TODO: Add documentation link
# TODO: Add changelog link

[tool.setuptools.packages.find]
where = ["src"]
include = ["lussac"]
namespaces = false
