[build-system]
requires = ["pip>=21.3", "setuptools>=65.6.3"]

[project]
name = "lussac"
version = "2.0.0b5.post1"
authors = [
	{name="Aurélien Wyngaard", email="aurelien.wyngaard@gmail.com"}
]
description = "Python package for automatic post-processing and merging of multiple spike-sorting analyses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"networkx >= 3.0",
	"numpy >= 1.23",
	"pandas >= 1.4.4",
	"scikit-learn >= 1.1.0",
	"scipy >= 1.9",
	"plotly >= 5.8.2",
	"kaleido",
	"jsmin >= 3.0",
	"numba >= 0.56.2",
	"tqdm >= 4.64.0",
	"requests >= 2.28.0",
	"overrides >= 7.3.1",
	"spikeinterface >= 0.100.0, < 0.101.0"
]

[project.scripts]
lussac = "lussac.main:main"

[project.optional-dependencies]
dev = [
	"pytest>=7.1.3",
	"pytest-cov>=4.0.0",
	"matplotlib",
	"hdbscan>=0.8.33",  # 0.8.31/32 crash.
	"zarr>=2.13.0",
	"wavpack-numcodecs>=0.1.2",
	"sphinx>=7.0.1",
	"sphinxemoji>=0.2.0",
	"sphinx-rtd-theme>=1.3.0"
]

[project.urls]
homepage = "https://github.com/BarbourLab/lussac"
repository = "https://github.com/BarbourLab/lussac"
documentation = "https://lussac.readthedocs.io/"
changelog = "https://github.com/BarbourLab/lussac/releases"

[tool.coverage.run]
data_file = "tests/.coverage"
source = ["src/lussac/"]

[tool.coverage.report]
exclude_lines = [
	# Have to re-enable the standard pragma.
	"pragma: no cover",

	# Don't complain about abstract methods.
	"@(abc.)?abstractmethod",

	# Numba code isn't correctly checked for coverage.
	"@numba.jit"
]

[tool.coverage.html]
directory = "tests/coverage_html_report"

[tool.coverage.xml]
output = "tests/coverage.xml"

[tool.pytest.ini_options]
cache_dir = "tests/.pytest_cache"
minversion = "7.1.3"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests/"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lussac*"]
namespaces = false
